examples/test/testpolicy1960.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1960
  namespace: namespace131
spec:
  podSelector:
    matchLabels:
      key14: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value46
          key47: value36
          key25: value27
      podSelector:
        matchLabels:
          key2: value8
          key15: value8
          key21: value13
